<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">yoseptalk</string>
    <item name="darkorange" type="color">#FFFF8800</item>
    <string name="contents">Choose a contents</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="signup_name">Name</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_userName">Change User Name</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="return_chatroom">Return ChatRoom</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_google_email">Google Email</string>
    <string name="btn_back_to_login">로그인화면으로 돌아가기</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">회원가입하러 가기</string>
    <string name="btn_link_to_login">이미 등록된 회원입니다.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_google_to_login">google연동 로그인하기</string>
    <string name="btn_forgot_password">비밀번호를 잃어버렸나요?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_userName">Name</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="forgot_password_msg_kr">등록된 이메일을 적으시면 해당 이메일로 \n 비밀번호 초기화에 대한 지침을 알려드리겠습니다.</string>
    <string-array name="contents_array">
        <item>기타</item>
        <item>영화</item>
        <item>경기관람</item>
        <item>공연</item>
        <item>운동</item>
        <item>스터디</item>
    </string-array>

    <string-array name="department_array">
        <item>기타</item>
        <item>컴공</item>
        <item>정통</item>
        <item>교통</item>
        <item>뮤지컬</item>
    </string-array>

    <string-array name="time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!--Google login관련-->
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <color name="peoplecount_bg">#aaa99a</color>

</resources>
